--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ body {
 // 🎀 CONFIGURATION — EDIT THESE VALUES!
 // ============================================================
 // GIRLFRIEND_NAME: Change this to your partner's name.
-const GIRLFRIEND_NAME = "Nirali";
+const GIRLFRIEND_NAME = "Shellio";
 
 // BACKGROUND_IMAGE_PATH: Set to a repo-relative path like "assets/bg.jpg".
 // The image file must be committed to your GitHub repo for Pages to serve it.
@@ -387,7 +387,7 @@ btnYes.addEventListener('click', () => {
         <ellipse cx="30" cy="28" rx="10" ry="8" fill="rgba(255,255,255,0.3)" transform="rotate(-25 30 28)"/>
       </svg>
     </div>
-    <h1 class="celebration-title">YAYYY!! 💖</h1>
+    <h1 class="celebration-title">PSYCH!! You already are for life! Bahaha 💖</h1>
     <p class="celebration-text">thank you, and i didnt forget you're welcome</p>
     <button class="btn-replay" id="btnReplay" aria-label="Replay">Replay 🔄</button>
   `;
